[tool.poetry]
name = "hotmcparser"
version = "0.1.0"
description = ""
authors = ["wertiko1 <144675169+wertiko1@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.11.8"
bs4 = "^0.0.2"
pydantic = "^2.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
